--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 <body>
     <h1>Ricetta pancake</h1>
     <h2>Ingredienti</h2>
+    <ul>
+        <li>250 ml di latte</li>
+        <li>200 g di farina</li>
+        <li>1 uovo</li>
+        <li>100 g di zucchero</li>
+        <li>65 g di lievito</li>
+    </ul>
 </body>
 
 </html>
