--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h1>Ricetta pancake</h1>
     <h2>Ingredienti</h2>
     <ul>
-        <li>250 ml di latte</li>
-        <li>200 g di farina</li>
-        <li>1 uovo</li>
-        <li>100 g di zucchero</li>
-        <li>65 g di lievito</li>
+        <li>250 ml di <b>latte</b></li>
+        <li>200 g di <b>farina</b></li>
+        <li>1 <b>uovo</b></li>
+        <li>100 g di <b>zucchero</b></li>
+        <li>65 g di <b>lievito</b></li>
     </ul>
 </body>
 
