Aggiunto sottotitolo "Procedimento"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1>Ricetta pancake</h1>
+    
     <h2>Ingredienti</h2>
+    
     <ul>
         <li>250 ml di <b>latte</b></li>
         <li>200 g di <b>farina</b></li>
@@ -18,6 +20,8 @@
         <li>100 g di <b>zucchero</b></li>
         <li>65 g di <b>lievito</b></li>
     </ul>
+
+    <h2>Procedimento</h2>
 </body>
 
 </html>
