Aggiunta la lista ordinata del procedimento

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <h1>Ricetta pancake</h1>
-    
+
     <h2>Ingredienti</h2>
-    
+
     <ul>
         <li>250 ml di <b>latte</b></li>
         <li>200 g di <b>farina</b></li>
@@ -22,6 +22,16 @@
     </ul>
 
     <h2>Procedimento</h2>
+
+    <ol>
+        <li>Mettere in una ciotola l'uovo intero (o due piccole) insieme allo zucchero e sbatteteli con una forchetta
+            oppure con una frusta a mano.</li>
+        <li>Aggiungete il latte a temperatura ambiente e continuate a sbattere solo con la forchetta o con una frusta a
+            mano l'impasto per i pancake senza burro.</li>
+        <li>Aggiungete a poco a poco tutta la farina setacciata e il lievito in polvere per dolci e continuate a
+            mescolare con una frusta a mano in modo che non si fornino grumi fino a che otterrete una pastella liscia e
+            omogenea.</li>
+    </ol>
 </body>
 
 </html>
