--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     <h2>Procedimento</h2>
 
     <ol>
-        <li>Mettere in una ciotola l'uovo intero (o due piccole) insieme allo zucchero e sbatteteli con una forchetta
+        <li>Mettere <b>in una ciotola</b> l'uovo intero (o due piccole) insieme allo <b>zucchero</b> e sbatteteli con
+            una forchetta
             oppure con una frusta a mano.</li>
-        <li>Aggiungete il latte a temperatura ambiente e continuate a sbattere solo con la forchetta o con una frusta a
+        <li>Aggiungete il <b>latte</b> a temperatura ambiente e continuate a sbattere solo con la forchetta o con una
+            frusta a
             mano l'impasto per i pancake senza burro.</li>
         <li>Aggiungete a poco a poco tutta la farina setacciata e il lievito in polvere per dolci e continuate a
             mescolare con una frusta a mano in modo che non si fornino grumi fino a che otterrete una pastella liscia e
