Aggiunto sottotitolo "Varianti"

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             mescolare con una frusta a mano in modo che non si fornino grumi fino a che otterrete una pastella liscia e
             omogenea.</li>
     </ol>
+
+    <h2>Varianti</h2>
 </body>
 
 </html>
