--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
     </ol>
 
     <h2>Varianti</h2>
+
+    <p>Non serve mettere burro nella padella, in questo modo saranno davvero pancake senza burro.</p>
+
+    <p>Non schiacciate i pancake veloci dopo averli girati ma lasciateli belli gonfi.</p>
+
+    <p>La mia ricetta per pancake Non prevede burro la ricetta quindi non usatelo, non serve.</p>
+
 </body>
 
 </html>
