Aggiunta del grassetto e "a capo"

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
     <h2>Varianti</h2>
 
-    <p>Non serve mettere burro nella padella, in questo modo saranno davvero pancake senza burro.</p>
+    <p>Non serve mettere burro nella padella,<br> in questo modo saranno davvero pancake senza burro.</p>
 
-    <p>Non schiacciate i pancake veloci dopo averli girati ma lasciateli belli gonfi.</p>
+    <p><b>Non schiacciate i pancake</b> veloci dopo averli girati ma lasciateli belli gonfi.</p>
 
     <p>La mia ricetta per pancake Non prevede burro la ricetta quindi non usatelo, non serve.</p>
 
