Aggiunti l'horizontal rule e il paragrafo finale

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
     <p>La mia ricetta per pancake Non prevede burro la ricetta quindi non usatelo, non serve.</p>
 
+    <hr>
+
+    <p>Ricetta presa da Giallo Zafferano</p>
 </body>
 
 </html>
