--- a/index_bonus.html
+++ b/index_bonus.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Ricetta pancake</h1>
 
-    <h2>Ingredienti</h2>
+    <h2><img src="https://www.giallozafferano.it/images/243-24387/Pancakes-allo-sciroppo-d-acero_450x300.jpg" alt="pancake" style="float:right;">Ingredienti</h2>
 
     <ul>
         <li>250 ml di <b>latte</b></li>
